# git_action_scripts

./: CMakeLists.txt  Dockerfile  DoxDockerfile  Doxyfile  README.md  generate_test_units.py  path_cfg.yml  path_config_loader.py  swCmpBuildCheck.py  swCmpDocsGenerator.py  unitTestsLauncher.py
.github/workflows/: build-docker-image.yml
